--- a/Assets/Scripts/RootProject.asmdef
+++ b/Assets/Scripts/RootProject.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "RootProject",
-    "rootNamespace": "CraftCar",
+    "rootNamespace": "Game",
     "references": [
         "GUID:734d92eba21c94caba915361bd5ac177",
         "GUID:8819f35a0fc84499b990e90a4ca1911f",
