--- a/Assets/4-Scripts/RootProject.asmdef
+++ b/Assets/4-Scripts/RootProject.asmdef
@@ -15,7 +15,8 @@
         "GUID:5f3cf485eb0554709a8abbeace890c86",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:1ed07ff861e5f468287b0baef844706d",
-        "GUID:8409b46605242134dbe948184fa658e4"
+        "GUID:8409b46605242134dbe948184fa658e4",
+        "GUID:95524f93a1169a945a6729a21fecf675"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
