--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.ide.rider": "3.0.18",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.mobile.android-logcat": "1.3.2",
     "com.unity.render-pipelines.universal": "12.1.7",
     "com.unity.rendering.hybrid": "0.51.1-preview.21",
     "com.unity.test-framework": "1.1.31",
